<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mood"
        android:textAlignment="gravity"
        android:gravity="center_horizontal"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/joyful"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_pleasant"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/joyful"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/depressed"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_faint"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/depressed"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sleepy"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_asleep"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/sleepy"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sullen"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_despise"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/sullen"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/sad"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_sad"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/sad"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/irratiable"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_strive"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/irratiable"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/calm"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_calm"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/calm"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/confused"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_puzzled"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/confused"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/neutral"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_neutral"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/neutral"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/angry"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_rage"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/angry"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/happy"
            android:background="@color/borderColor"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="@dimen/null_dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            >
            <ImageView
                android:src="@drawable/mood_happy"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/null_dp"
                />
            <TextView
                android:text="@string/happy"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_height="@dimen/null_dp"
                android:layout_width="match_parent" />
        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/delete_param"
            android:text="@string/delete_param"
            android:layout_weight="1"
            android:layout_width="@dimen/null_dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/back_to_calendar"
            android:text="@string/close"
            android:layout_weight="1"
            android:layout_width="@dimen/null_dp"
            android:layout_height="wrap_content"/>

        </LinearLayout>

</LinearLayout>